add_executable(gtest_1 gtest_1.cpp)
target_link_libraries(gtest_1 gtest pthread)

add_executable(gtest_2 gtest_2.cpp)
target_link_libraries(gtest_2 gtest pthread)

add_executable(gtest_3 gtest_3.cpp)
target_link_libraries(gtest_3 gtest pthread)

add_executable(gtest_4 gtest_4.cpp)
target_link_libraries(gtest_4 gtest pthread)